[package]
authors = [ "Nathan Zadoks <nathan@nathan7.eu>",
            "John Ericson <Ericson2314@Yahoo.com>" ]
name = "fringe"
version = "0.0.1"

[dependencies.kernel32-sys]
optional = true
version = "0.2.2"

[dependencies.log]
version = "0.3.1"
default-features = false

[dependencies.libc]
optional = true
version = "0.1.6"

[dependencies.valgrind]
git = "https://github.com/nathan7/libvalgrind"
optional = true
rev = "7aa8b3fcd3b19994c4669cabc6eae1f96882729d"

[dependencies.void]
default-features = false
version = "1"

[dependencies.winapi]
optional = true
version = "0.2.6"

[dev-dependencies]
env_logger = "0.3.1"
simd = "0.1"
rand = "0.3"

[features]
default = ["os", "valgrind"]
os = ["libc", "kernel32-sys", "winapi"]
